--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
   <title>The Basic Website</title>
 </head>
 <body>
-  <h1>Welcome to The Most Basic Webiste.</h1>
+  <h1>Welcome to The Most Basic Website.</h1>
 </body>
 </html>
